Fix Sign-up section padding and margin spacing

--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,8 @@
 .quote {
     display: flex;
     justify-content: center;
-    margin: 50px 0;
+    margin-top: 100px;
+    margin-bottom: 150px;
     padding: 50px;
     background-color: #e5e7eb;
     border: rgb(202, 10, 10) solid 1px /*delete */
@@ -149,8 +150,10 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 20px;
-    margin: 0 50px 30px 30px;
+    padding: 50px;
+    margin-bottom: 150px;
+    margin-left: 40px;
+    margin-right: 40px;
     border-radius: 10px;
 }
 
